--- a/frontend/src/app/component/login/login.component.html
+++ b/frontend/src/app/component/login/login.component.html
@@ -26,17 +26,34 @@
   
     </div>
     <div class="col-sm-4">
-      <form class="form-horizontal">
+      <div *ngIf="message_flag"> {{message}}</div>
+      <form  [formGroup]="myform" >      
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="email" class="form-control" id="email">
+          <input type="email" 
+                 class="form-control" 
+                 id="email" 
+                 formControlName="email">
+                 <div  *ngIf="email.touched && email.invalid" class="alert alert-danger">
+                    <div *ngIf="email.errors.required">email cant be left blank</div>
+                    <div *ngIf="email.errors.minlength">email should have minimum three characters</div>
+                    <div *ngIf="email.errors.cannotContainSpace">email can not contain space</div>
+                </div>
         </div>
         <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password">
+          <label for="password">Password</label>
+          <input type="password" 
+                 class="form-control" 
+                 id="password" 
+                 formControlName="password">
+          <div  *ngIf="password.touched && password.invalid" class="alert alert-danger">
+              <div *ngIf="password.errors.required">password cant be left blank</div>
+              <div *ngIf="password.errors.minlength">password should have minimum three characters</div>
           </div>
-          <button class="btn btn-primary">Login</button>
+        </div>
+        <button id="login" name="login" class="btn btn-primary" (click)="login()">Login</button>
       </form>
+
       <a class="nav-link" routerLink="/register">New User ? Register</a>
     </div>
     
