--- a/frontend/src/app/component/registration/registration.component.html
+++ b/frontend/src/app/component/registration/registration.component.html
@@ -2,8 +2,9 @@
   <!-- <p>
     register works!
   </p> -->
+  <div *ngIf="message_flag"> {{message}}</div>
   <br>
-  <form [formGroup]="myform" >
+  <form  [formGroup]="myform" >
     <div class="form-group">
       <label for="firstName">First Name</label>
       <input type="text" 
@@ -24,11 +25,14 @@
       <input type="email" 
              class="form-control" 
              id="email" 
-             formControlName="email">
+             formControlName="email" 
+             (keyup.enter)="checkEmailAvailability()"
+             (blur)="checkEmailAvailability()">
              <div  *ngIf="email.touched && email.invalid" class="alert alert-danger">
                 <div *ngIf="email.errors.required">email cant be left blank</div>
                 <div *ngIf="email.errors.minlength">email should have minimum three characters</div>
                 <div *ngIf="email.errors.cannotContainSpace">email can not contain space</div>
+                <div *ngIf="email.errors.usernameExists">this email id is taken. choose a different one!</div>
             </div>
     </div>
     <div class="form-group">
