front end : user home service

--- a/frontend/src/app/component/user-navigation/user-navigation.component.html
+++ b/frontend/src/app/component/user-navigation/user-navigation.component.html
@@ -14,7 +14,7 @@
         <a class="nav-link" routerLink="/home" routerLinkActive="active current">Home</a>
   </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="/partners" routerLinkActive="active current">Aa</a>
+          <a class="nav-link" routerLink="/books" routerLinkActive="active current">Books</a>
     </li>
     
     <li class="nav-item">
