frontend : changes to receive books

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,7 +5,7 @@
 
 <!-- header -->
 <div class="container">
-  <div class="jumbotron">
+  <div class="jumbotron bg-secondary">
       <h1>Microservices</h1>
   </div>
 </div>
@@ -15,9 +15,12 @@
 </div>
 
 <!-- footer -->
-<div class="container footerStyle">
+<div class="container footerStyle bg-secondary">
   <div class="footerStyleContent">
-    <p class="text-muted credit">Developed by: <a href="#">Partha Biswas</a>. &copy; Copyright 2018</p>
+    <p class="text-white credit">Developed by: 
+      Partha Biswas
+      <!-- <a href="#">Partha Biswas</a> -->
+      . &copy; Copyright 2018</p>
   </div>
 </div>
 
