--- a/frontend/src/app/component/user-navigation/user-navigation.component.html
+++ b/frontend/src/app/component/user-navigation/user-navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
   <!--<a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
 
     <!-- <form class="form-inline my-2 my-lg-0"> -->
       <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
-      <button class="btn btn-outline-success my-2 my-sm-0"  (click)="logout()">Logout</button>
+      <button class="btn btn-outline-success my-2 my-sm-0 bg-white"  (click)="logout()">Logout</button>
     <!-- </form> -->
   </div>
 </nav>
