--- a/frontend/src/app/component/books/books.component.html
+++ b/frontend/src/app/component/books/books.component.html
@@ -1,8 +1,8 @@
 <!-- <p>
   books works!
 </p> -->
-<script src="../node_modules/jquery/dist/jquery.min.js"/>
-<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"/>
+<!-- <script src="../node_modules/jquery/dist/jquery.min.js"/>
+<script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"/> -->
 
 <div class="container">
   <br>
