frontend : user authentication at login and forget password

--- a/frontend/src/app/component/login/login.component.html
+++ b/frontend/src/app/component/login/login.component.html
@@ -55,6 +55,7 @@
       </form>
 
       <a class="nav-link" routerLink="/register">New User ? Register</a>
+      <a class="nav-link" routerLink="/forgot-password">Forgot password ? Click here</a><br>
     </div>
     
   
