--- a/frontend/src/app/component/user-navigation/user-navigation.component.html
+++ b/frontend/src/app/component/user-navigation/user-navigation.component.html
@@ -25,7 +25,7 @@
         <a class="nav-link" routerLink="/aboutUs" routerLinkActive="active current">cc</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink="/contactUs" routerLinkActive="active current">dd</a>
+          <a class="nav-link" routerLink="/profile" routerLinkActive="active current">Profile</a>
         </li>
 
       <!--  <li class="nav-item dropdown">
