--- a/frontend/src/app/component/registration/registration.component.html
+++ b/frontend/src/app/component/registration/registration.component.html
@@ -35,6 +35,24 @@
                 <div *ngIf="email.errors.usernameExists">this email id is taken. choose a different one!</div>
             </div>
     </div>
+
+    <div class="form-group">
+      <label for="securityQuestion">Security Question</label>
+      <input type="text" 
+             class="form-control"
+             id="securityQuestion" 
+             formControlName="securityQuestion">
+             <div  *ngIf="securityQuestion.touched && securityQuestion.invalid" class="alert alert-danger">Security Question is required</div>
+    </div>
+    <div class="form-group">
+      <label for="securityAnswer">Security Answer</label>
+      <input type="text" 
+             class="form-control"
+             id="securityAnswer" 
+             formControlName="securityAnswer">
+             <div  *ngIf="securityAnswer.touched && securityAnswer.invalid" class="alert alert-danger">Security Answer is required</div>
+    </div>
+
     <div class="form-group">
       <label for="password">Password</label>
       <input type="password" 
