--- a/admin-application/src/main/resources/templates/index.html
+++ b/admin-application/src/main/resources/templates/index.html
@@ -49,7 +49,7 @@
 			<p>
 				<label for="username">Username</label> <br> 
 				<input type="text" class="form-control" id="username" name="username"  th:field="*{username}"/>
-				<!-- <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"/> -->
+				 <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
 			</p>
 			<p>
 				<label for="password">Password</label><br> 
