--- a/admin-application/src/main/resources/templates/common/home-common.html
+++ b/admin-application/src/main/resources/templates/common/home-common.html
@@ -41,8 +41,8 @@
 					<a class="nav-link" href="#" th:href="@{/editBook}">Edit book</a>
 					</li>
 					
-					<li class="nav-item" th:classappend="${module == 'report' ? 'active' : ''}">
-					<a class="nav-link" href="#" th:href="@{/report}">Report</a>
+					<li class="nav-item" th:classappend="${module == 'books' ? 'active' : ''}">
+					<a class="nav-link" href="#" th:href="@{/books}">Books</a>
 					</li>
 					
 
@@ -56,7 +56,7 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
-      </li>-->
+      </li>  -->
 				</ul>
 
 				<!-- <form class="form-inline my-2 my-lg-0"> -->
