--- a/admin-application/src/main/resources/templates/common/home-common.html
+++ b/admin-application/src/main/resources/templates/common/home-common.html
@@ -61,9 +61,14 @@
 
 				<!-- <form class="form-inline my-2 my-lg-0"> -->
 				<!-- <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search"> -->
+				        <!-- <form th:action="@{/logout}" method="post">
+            <input type="submit" value="Sign Out"/>
+        </form> -->
+				
+				<form action="#" th:action="@{/logout}" method="post">
 				<button class="btn btn-outline-success my-2 my-sm-0 bg-white"
-					(click)="logout()">Logout</button>
-				<!-- </form> -->
+					type="submit">Logout</button>
+				</form>
 			</div>
 		</nav>
 
