--- a/admin-application/src/main/resources/templates/index.html
+++ b/admin-application/src/main/resources/templates/index.html
@@ -45,16 +45,18 @@
 
 			</div>
 			<div class="col-sm-4">
-			 <form action="#" th:action="@{/login}" th:object="${user}"  method="post">		
+			<form th:action="@{/index}"  method="post">		
 			<p>
 				<label for="username">Username</label> <br> 
-				<input type="text" class="form-control" id="username" name="username"  th:field="*{username}"/>
-				 <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
+				 <input type="text" name="username" id="username" class="form-control"/>
+				<!-- <input type="text" class="form-control" id="username" name="username"  th:field="*{username}"/>
+				 <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span> -->
 			</p>
 			<p>
 				<label for="password">Password</label><br> 
-				<input type="password" class="form-control" id="password" name="password" th:field="*{password}"/>
-				 <!-- <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"/> -->
+				<input type="password" class="form-control" id="password" name="password"/>
+				<!-- <input type="password" class="form-control" id="password" name="password" th:field="*{password}"/>
+				 <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"/> -->
 			</p>
 			<p>
 				<button type="submit" id="login" name="login" class="btn btn-primary">Login</button>
