--- a/admin-application/src/main/resources/templates/common/home-common.html
+++ b/admin-application/src/main/resources/templates/common/home-common.html
@@ -7,6 +7,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" />
 <script type="text/javascript" th:src="@{/js/jquery-3.3.1.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
 </head>
 <body>
 
@@ -37,9 +38,9 @@
 					<a class="nav-link" href="#" th:href="@{/addBook}">Add book</a>
 					</li>
 					
-					<li class="nav-item" th:classappend="${module == 'editBook' ? 'active' : ''}">
+					<!-- <li class="nav-item" th:classappend="${module == 'editBook' ? 'active' : ''}">
 					<a class="nav-link" href="#" th:href="@{/editBook}">Edit book</a>
-					</li>
+					</li> -->
 					
 					<li class="nav-item" th:classappend="${module == 'books' ? 'active' : ''}">
 					<a class="nav-link" href="#" th:href="@{/books}">Books</a>
