frontend: application name changed to bookstore

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -6,7 +6,7 @@
 <!-- header -->
 <div class="container">
   <div class="jumbotron bg-secondary">
-      <h1>Microservices</h1>
+      <h1>Bookstore</h1>
   </div>
 </div>
 
