--- a/admin-application/src/main/resources/templates/books.html
+++ b/admin-application/src/main/resources/templates/books.html
@@ -20,6 +20,7 @@
 					class="table table-bordered table-hover table-striped">
 					<thead>
 						<tr>
+							<th></th>
 							<th>Title</th>
 							<th>Author</th>
 							<th>Category</th>
@@ -35,6 +36,15 @@
 							<td style="display: none"><input type="hidden" id="id"
 								name="id" th:value="${book.id}"/></td>
 							<!-- <td th:text="${book.id}"></td> -->
+							<!-- <td th:text="${book.title}"></td> -->
+							<td>
+									<div class="thumbnail">
+										<br> <a th:href="@{'/editBook?id='+${book.id}}"> <img
+											th:src="@{'data:image/png;base64,'+${book.image}}" />
+											<p>Edit Details.</p>
+										</a>
+									</div>
+								</td>
 							<td th:text="${book.title}"></td>
 							<td th:text="${book.author}"></td>
 							<td th:text="${book.category}"></td>
