--- a/frontend/src/app/component/user-navigation/user-navigation.component.html
+++ b/frontend/src/app/component/user-navigation/user-navigation.component.html
@@ -12,18 +12,15 @@
       </li> -->
       <li class="nav-item">
         <a class="nav-link" routerLink="/home" routerLinkActive="active current">Home</a>
-  </li>
+    </li>
       <li class="nav-item">
           <a class="nav-link" routerLink="/books" routerLinkActive="active current">Books</a>
     </li>
-    
-    <li class="nav-item">
-        <a class="nav-link" routerLink="/achievements" routerLinkActive="active current">bb</a>
-  </li>
 
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/aboutUs" routerLinkActive="active current">cc</a>
+    <li class="nav-item">
+        <a class="nav-link" routerLink="/cart" routerLinkActive="active current">Cart</a>
       </li>
+    
       <li class="nav-item">
           <a class="nav-link" routerLink="/profile" routerLinkActive="active current">Profile</a>
         </li>
