--- a/frontend/src/app/component/cart/cart.component.html
+++ b/frontend/src/app/component/cart/cart.component.html
@@ -44,8 +44,8 @@
   
           </td>
           <td>
-            <button type="button" class="btn btn-primary" (click)="updateCart($event)" value="">Update</button><br><br>
-            <button type="button" class="btn btn-danger" (click)="deleteCart($event)">Delete</button>
+            <button type="button" class="btn btn-primary" (click)="updateItemCart($event)" value="">Update</button><br><br>
+            <button type="button" class="btn btn-danger" (click)="deleteItemCart($event)">Delete</button>
           </td>
         </tr>
         <tr>
