code change due to migration from angular version 5.2.0 to 9.1.3

--- a/frontend/src/app/component/cart/cart.component.html
+++ b/frontend/src/app/component/cart/cart.component.html
@@ -50,7 +50,8 @@
         </tr>
         <tr>
           <p align="center">
-            <button type="button" class="btn btn-primary btn-lg" (click)="placeOrder($event)">Place Order</button>
+            button here has been commented
+            <!-- <button type="button" class="btn btn-primary btn-lg" (click)="placeOrder($event)">Place Order</button> -->
           </p>
         </tr>
       </table>
