--- a/admin-application/src/main/resources/templates/common/home-common.html
+++ b/admin-application/src/main/resources/templates/common/home-common.html
@@ -43,7 +43,12 @@
 					</li> -->
 					
 					<li class="nav-item" th:classappend="${module == 'books' ? 'active' : ''}">
-					<a class="nav-link" href="#" th:href="@{/books}">Books</a>
+					<a class="nav-link" href="#" th:href="@{/books?currentPage=1}">Books</a>
+					</li>
+					
+					
+					<li class="nav-item" th:classappend="${module == 'reports' ? 'active' : ''}">
+					<a class="nav-link" href="#" th:href="@{/reports}">Reports</a>
 					</li>
 					
 
