--- a/frontend/src/app/component/cart/cart.component.html
+++ b/frontend/src/app/component/cart/cart.component.html
@@ -48,18 +48,10 @@
             <button type="button" class="btn btn-danger" (click)="deleteItemFromCart($event)">Delete</button>
           </td>
         </tr>
-        <tr>
-          <p align="center">
-            button here has been commented
-            <!-- <button type="button" class="btn btn-primary btn-lg" (click)="placeOrder($event)">Place Order</button> -->
-          </p>
-        </tr>
       </table>
-
+      <hr class="my-12"/>
+      <p>
+        <button type="button" class="btn btn-primary btn-lg" (click)="placeOrder($event)">Place Order</button>
+      </p>
     </div>
-  
-  
-    
-   
-    
   </div>
