--- a/frontend/src/app/component/forgot-password/forgot-password.component.html
+++ b/frontend/src/app/component/forgot-password/forgot-password.component.html
@@ -1,8 +1,5 @@
 <div>
-  <p>
-    Forget password works!
-  </p>
-  <div> {{model.message}}</div><br>
+  <div> <br> {{model.message}} </div><br>
   <div class="container row">
   <div class="col-sm-6">
       <input  [(ngModel)]="model.email"  class="form-control" placeholder="Enter your registered email" >
