--- a/frontend/src/app/component/profile/profile.component.html
+++ b/frontend/src/app/component/profile/profile.component.html
@@ -1,21 +1,64 @@
 <div class="container">
 
-<div class="container row">
+  <div class="row">
+    <!-- <div class="col-md-3"> -->
+      <div class="card col-md-3" style="width: 18rem;">
+        <table class="table">
+          <tr (click)="menuChange('profileDetails')" [style.backgroundColor]="currentModule=='profileDetails' ? 'rgb(204,222,255)':'white'">
+            <td>Profile Details</td>
+          </tr>
+          <tr (click)="menuChange('addressDetails')" [style.backgroundColor]="currentModule=='addressDetails' ? 'rgb(204,222,255)':'white'">
+              <td>Address Details</td>
+            </tr>
+          <tr (click)="menuChange('changePassword')" [style.backgroundColor]="currentModule=='changePassword' ? 'rgb(204,222,255)':'white'">
+            <td>Change password</td>
+          </tr>
+        </table>
+      </div>
+    <div class="card col-md-9" id="profileDetails" *ngIf="currentModule=='profileDetails'">
+      <!-- <div class="card-header">Personal Details ::</div> -->
+      <div class="card-body">sfsf1</div>
+    </div>
 
-<div class="col-sm-3">
-  <!-- As a link -->
-<nav class="navbar navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
-  </nav>
-  
-  <!-- As a heading -->
-  <nav class="navbar navbar-light bg-light">
-    <span class="navbar-brand mb-0 h1">Navbar</span>
-  </nav>
-</div>
 
-<div class="col-sm-9">
-sdfsfsf
-</div>
-</div>
+    <div class="card col-md-9" id="addressDetails" *ngIf="currentModule=='addressDetails'">
+      <div class="card-body">
+        <textarea class="form-control"></textarea>
+        <br>
+        <button type="button" class="btn btn-primary" (click)="updateAddress($event)" value="" >Update address</button>
+      </div>
+    </div>
+
+    <div class="card col-md-9" id="changePassword" *ngIf="currentModule=='changePassword'">
+      <!-- <div class="card-header">Change Password ::</div> -->
+      <div class="card-body">
+        <table class="table">
+          <tr>
+            <td>Security Question : </td>
+            <td> {{this.securityDetails.securityQuestion}}</td>
+          </tr>
+          <tr>
+            <td >Security Answer : </td>
+            <td> <input type="password" (input)="enteredSecurityAnswer=$event.target.value" 
+              id="enteredSecurityAnswer" class="form-control" 
+              (keyup.enter)="verifySecurityAnswer()"
+              (blur)="verifySecurityAnswer()"></td>
+          </tr>
+          <tr>
+            <td > Enter new password : </td>
+            <td> <input type="password" (input)="enteredPassword=$event.target.value" id="newPassword" class="form-control" [disabled]="disablePasswordEntry"></td>
+          </tr>
+          <tr>
+            <td > Re-Enter new password : </td>
+            <td> <input type="password" (input)="reenteredPassword=$event.target.value" id="rnewPassword" class="form-control" [disabled]="disablePasswordEntry"></td>
+          </tr>
+          <tr>
+            <td>  <button type="button" class="btn btn-primary" (click)="updatePassword($event)" value="" [disabled]="disablePasswordEntry">Change Password</button>
+            </td>
+          </tr>
+        </table>
+
+      </div>
+    </div>
+  </div>
 </div>
