--- a/frontend/src/app/component/user-navigation/user-navigation.component.html
+++ b/frontend/src/app/component/user-navigation/user-navigation.component.html
@@ -22,6 +22,10 @@
       </li>
     
       <li class="nav-item">
+        <a class="nav-link" routerLink="/orders" routerLinkActive="active current">My Orders</a>
+      </li>
+    
+      <li class="nav-item">
           <a class="nav-link" routerLink="/profile" routerLinkActive="active current">Profile</a>
         </li>
 
